--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 ### Site Settings ###
-title               : portfolYOU
+title               : 🚢 it
 description         : >-
                       I turn coffee :coffee: into code,
                       use tabs over spaces
@@ -26,23 +26,23 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Chris Kaschner
-  image             : https://i.imgur.com/uyDNQnn.jpg
-  behance           : your_username
+  image             : /_data/Profil.png
+#  behance           : your_username
 # dribbble          : your_username
   email             : username@domain.com
-  facebook          : your_username
-  github            : your_username
+#  facebook          : your_username
+  github            : chriskaschner
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
   linkedin          : chriskaschner
-  medium            : your_username
+#  medium            : your_username
 # soundcloud        : your_username
 # spotify           : your_username
 # stackoverflow     : your_user_id
 # tumblr            : your_username.tumblr.com
 # twitch            : your_username
-  twitter           : your_username
+#  twitter           : your_username
 # vimeo             : your_username
 # youtube           : your_channel_name
 # keybase           : your_username
