--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 ### Site Settings ###
 title               : 🚢 it
 description         : >-
-                      I turn coffee :coffee: into code,
-                      use tabs over spaces
-                      and never broke production.
+                      "Chris continues to be an excellent manager and representative. Chris trusts his team members to be self- guided and steps in when he is needed.
+                      He has this Goldilocks-like sense for the interventions he does make on our behalf - never too much nor too little; just right. He nudges without being a noodge."
 baseurl             : ""            # Change to empty quotes if you are hosting your site at <your-username>.github.io directly
 repository          : chriskaschner/chriskaschner.github.io      # Change to <your-username>/<your-username>.github.io (or remove it if you don't need remote projects)
 remote_theme        : yousinix/portfolYOU
