--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ nav_exclude:                                            # The following paths ar
 ### Author Info ###
 author:
   name              : Chris Kaschner
-  image             : /_data/Profil.jpg
+  image             : https://raw.githubusercontent.com/chriskaschner/chriskaschner.github.io/master/_data/Profil.jpg
 #  behance           : your_username
 # dribbble          : your_username
   email             : username@domain.com
